@@ -39,6 +39,7 @@ $ -> Language fix or change
  # [#21544] The a element in JButtonHelp->fetchButton is not well-formed
  # [#21555] Fields of type=media do not have an obvious way to clear the data
  # [#21602] Preventing saving same alias in same category
+ # [#20690] Call to undefined method JRegistry::loadSetupFile()
 
 28-Jul-2010 Jean-Marie Simonet
  # [#21605] small change in menu manager: new menu item. Thanks Bill.
